--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ transform: translate(0%, 25%);
             <option value="4">1:100,000</option>
             <option value="5">1:50,000</option>
             <option value="6">1:25,000</option>
-            <option value="7">1:10,000</option>
+            <option value="7" selected="selected">1:10,000</option>
             <option value="8">1:5,000</option>
             <option value="9">1:2,500</option>
             <option value="10">1:1,250</option>
