Add Migrashim Rami

--- a/index.html
+++ b/index.html
@@ -217,6 +217,10 @@ transform: translate(0%, 25%);
          <label for="contours">Show Contours:</label>
          <input class="checkmark" type="checkbox" id="contours" name="contours">
 		 </div></li>
+     <li><div class="container>
+      <label for="migrashim">Show Migrashim Rami:</label>
+      <input class="checkmark" type="checkbox" id="migrashim" name="migrashim">
+  </div></li>
 		 <li><input class="button" type="submit" formtarget="_blank" value="Submit"></li>
       </form>
    </body>
